Mantaflow: Non emmiting flow source affects simulation #74762

Closed
opened 2020-03-14 19:51:21 +01:00 by Iago Mota · 6 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 650 Ti
Processor: Intel® Core™ i7-3770

Blender Version
Broken: (2.83 Alpha, acab745078)
Worked: never

Short description of error
When doing a smoke simulation in Mantaflow, the initial velocity of flow source is able to affect another sources despite having set Surface Emmision to 0. This can become a big problem in simulations which require multiple emitters to work. The video below demonstrates a situation where the emitter doesn't emit any smoke, yet its initial velocity of 50 pushes the smoke of another emitter to the side.
Initial Velocity Demo - C.mp4

Exact steps to reproduce the error

  1. Add a plane.
  2. Press F3, type in and select "Quick Smoke"
  3. Duplicate the plane and rotate it to be perpendicular to the first one.
  4. In the new plane's emitter settings, ensure it doesn't emit any smoke, and enable initial velocity.
  5. increase the initial velocity from normal to a relatively high value (10, for example).

Here's the .blend from the video.
BugReport_03_InitialVelocity.blend

**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce GTX 650 Ti Processor: Intel® Core™ i7-3770 **Blender Version** Broken: (2.83 Alpha, acab7450784a) Worked: never **Short description of error** When doing a smoke simulation in Mantaflow, the initial velocity of flow source is able to affect another sources despite having set Surface Emmision to 0. This can become a big problem in simulations which require multiple emitters to work. The video below demonstrates a situation where the emitter doesn't emit any smoke, yet its initial velocity of 50 pushes the smoke of another emitter to the side. [Initial Velocity Demo - C.mp4](https://archive.blender.org/developer/F8406418/Initial_Velocity_Demo_-_C.mp4) **Exact steps to reproduce the error** 1. Add a plane. 2. Press F3, type in and select "Quick Smoke" 3. Duplicate the plane and rotate it to be perpendicular to the first one. 4. In the new plane's emitter settings, ensure it doesn't emit any smoke, and enable initial velocity. 5. increase the initial velocity from normal to a relatively high value (10, for example). Here's the .blend from the video. [BugReport_03_InitialVelocity.blend](https://archive.blender.org/developer/F8406427/BugReport_03_InitialVelocity.blend)
Author
Added subscriber: @Iago-Diogo-de-Vasconcelos-Mota
Richard Antalik changed title from Mantaflow: Smoke initial velocity affects other emitters to Mantaflow: Non emmiting flow source affects simulation 2020-03-17 13:55:22 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by bf9c4af9bb

This issue was referenced by bf9c4af9bb7436468eaa4fc954ab06c7369738d2

Added subscriber: @sebbas

Added subscriber: @sebbas

Hope this fixes the issue, thanks for the nice report + video!

Hope this fixes the issue, thanks for the nice report + video!

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-03-17 18:22:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74762
No description provided.