Fix T74762: Mantaflow: Non emmiting flow source affects simulation